--- a/public/customer/assets/css/custom-styles.css
+++ b/public/customer/assets/css/custom-styles.css
@@ -2,4 +2,12 @@
 .error{
     color:red!important;
 }
+.nav-link {
+    display: block;
+    padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
+    font-size: var(--bs-nav-link-font-size);
+    font-weight: 700;
+    color: #000;
+    
+}
 
