--- a/public/customer/assets/css/style.css
+++ b/public/customer/assets/css/style.css
@@ -715,9 +715,10 @@ ul {
 }
 
 .btn-white {
-  color: var(--main-color);
+  color: #000000;
   border: 0;
-  background: #fff;
+  background: #ffc244;
+  font-weight: 900;
   font-size: 14px;
   -webkit-transition: all 0.4s ease-in;
   transition: all 0.4s ease-in;
